--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,7 +4,10 @@ ja:
       board:
         author_name: 名前
         title: タイトル
-        bosy: 本文
+        body: 本文
+      comment:
+        name: 名前
+        comment: コメント
   views:
     pagination:
       first: 最初
